--- a/src/main/webapp/app/css/style.css
+++ b/src/main/webapp/app/css/style.css
@@ -77,27 +77,30 @@ a:hover {color:#2a93f5;}
 .fr{float: right;}
 /*时间轴*/
 .time_box{
-    padding:0.35rem 0.3rem;
+    /*padding:0.35rem 0.3rem;*/
+    height:1.27rem;
+    vertical-align: top;
     border-bottom: 1px solid #e4e4e4;
     border-top: 1px solid #e4e4e4;
 }
 /*表格*/
 .table_box{
     background: #fff;
-    min-height: 8.96rem;
+    min-height: 9rem;
 }
 .table_box .info,.list .info{
     display: none;
-    color:#aaa;
-    line-height: 2rem;
+    padding-top: 0.8rem;
+    color: #999;
+    line-height: 0.5rem;
     text-align: center;
-    height:2rem;
-    font-size: 0.24rem;
+    height: 0.5rem;
+    font-size: 0.28rem;
 }
 .table_item{
     /*display: none;*/
-    height:1rem;
-    line-height: 1rem;
+    height:0.98rem;
+    line-height: 0.98rem;
     border-bottom: 1px solid #e4e4e4;
     position: relative;
 }
@@ -106,8 +109,8 @@ a:hover {color:#2a93f5;}
     top:50%;
     margin-top: -0.13rem;
     left:0.3rem;
-    font-size: 0.26rem;
-    color:#aaa;
+    font-size: 0.22rem;
+    color:#999;
     height:0.26rem;
     line-height: 0.26rem;
 }
@@ -130,9 +133,12 @@ a:hover {color:#2a93f5;}
 }
 .table_item ul li.booked{
     background: #f0f0f0;
-    border-right: 2px solid #f0f0f0;
+    border-right: 0.04rem solid #f0f0f0;
 }
-
+.table_item ul li.booked.clicked{
+    background: #d4eefe;
+    border-color: #d4eefe;
+}
 /*弹层*/
 .layer{
     padding:0 0.3rem;
@@ -362,16 +368,17 @@ a:hover {color:#2a93f5;}
     color:#aaaaaa;
 }
 .list .item .state{
-    font-size: 0.3rem;
-    width: 1.45rem;
-    height:0.58rem;
-    line-height: 0.52rem;
-    text-align: center;
-    border:1px solid #aaa;
-    border-radius: 0.26rem;
     position: absolute;
     right:0.2rem;
     bottom:0.3rem;
+    width: 1.08rem;
+    height:0.52rem;
+    font-size: 0.24rem;
+    color: #aaa;
+    line-height: 0.52rem;
+    text-align: center;
+    border:1px solid #dadada;
+    border-radius: 0.26rem;
 }
 .list .item.ongoing .state{
     color:#f57a62;
@@ -391,7 +398,7 @@ a:hover {color:#2a93f5;}
     background: rgba(0,0,0,0.5);
 }
 .model .layer{
-    width: 5.85rem;
+    width: 5.86rem;
     height:auto;
     position: fixed;
     bottom:50%;
@@ -399,17 +406,18 @@ a:hover {color:#2a93f5;}
     right:0;
     margin:auto;
     color:#000;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
     background: rgba(0,0,0,0);
     border-radius: 5px;
     transform: translateY(50%);
 }
 .layer .title{
-    height: 1rem;
-    padding:0;
-    line-height: 1rem;
+    height:auto;
+    padding:0.46rem 0 0.3rem 0;
+    font-size: 0.3rem;
+    color:#333;
     text-align: center;
+    line-height: 1;
     border-bottom: 1px solid #e4e4e4; 
 }
 .layer .con{
@@ -423,13 +431,18 @@ a:hover {color:#2a93f5;}
     padding:0 0.3rem;
 }
 .layer .list_name{
-    width: 1.2rem;
     float: left;
+    width: 0.92rem;
+    font-size: 0.26rem;
     color:#666;
+    text-align: right;
+    margin-right: 0.4rem;
 }
 .layer .list_text{
     float: left;
-    width: 4.05rem;
+    width: 3.65rem;
+    font-size: 0.26rem;
+    color:#666;
 }
 .layer .list_text span{
     display: inline-block;
@@ -440,7 +453,7 @@ a:hover {color:#2a93f5;}
     color:#f68974;
     font-size: 0.26rem;
     padding-left: 0.35rem;
-    margin-left: 0.35rem;
+    margin: 0.2rem 0 0rem 0.35rem;
     background: url(../images/icon4.png) left center no-repeat;
     background-size: 0.3rem 0.3rem;
 }
@@ -450,12 +463,13 @@ a:hover {color:#2a93f5;}
     -webkit-transform: translateX(0);
 }
 .layer .btn_con p{
+    float: left;
     width: 5.6rem;
     height: 0.86rem;
     position: static;
     margin-top: 0;
-    float: left;
     padding:0 0.5rem;
+    font-size: 0.3rem;
 }
 .layer .btn_layer{
     float: left;
@@ -466,16 +480,18 @@ a:hover {color:#2a93f5;}
     background: #1f97f4;
     color:#fff;
     margin:auto;
-    margin:  0.2rem 0.3rem 0.3rem;
+    margin:  0.14rem 0.3rem 0.3rem;
     border-radius: 5px;
 }
 .model  .close{
     width: 0.4rem;
     height:0.4rem;
     margin-left:5.7rem;
-    margin-bottom: 0.05rem;
-    background: url(../images/layer_close.png) 0 0 no-repeat;
-    background-size: 0.4rem 0.4rem;
+    margin-bottom: 0.1rem;
+    background: url(../images/close1.png) center center no-repeat;
+    background-size: 0.2rem 0.2rem;
+    border-radius: 50%;
+    background-color: #fff; 
 }
 .layer .but_ok{
     display: inline-block;
